--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 
     compile project(path: ':pager-bottom-tab-strip')
     compile project(path: ':imagepicker')
+    compile project(path: ':ncalendar')
     //注解
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.jakewharton:butterknife:8.5.1'
@@ -45,6 +46,9 @@ dependencies {
     compile 'com.github.siyamed:android-shape-imageview:0.9.+@aar'
 
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
+    compile 'com.google.android:flexbox:0.2.5'
+    compile 'com.google.android:flexbox:0.3.0-alpha2'
+    compile 'com.melnykov:floatingactionbutton:1.3.0'
 
     compile 'com.gyf.barlibrary:barlibrary:2.3.0'
     testCompile 'junit:junit:4.12'
