--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/iv_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/iv_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".ui.activity.MainActivity">
@@ -23,13 +23,14 @@
         <activity android:name=".ui.base.BaseActivity" />
         <activity android:name=".ui.activity.TimeActivity" />
         <activity android:name=".ui.activity.ResultActivity" />
-
         <activity
             android:name="com.lzy.imagepicker.ui.ImagePreviewDelActivity"
             android:theme="@style/ImagePickerThemeFullScreen" />
         <activity android:name=".ui.activity.UpdatePWActivity" />
         <activity android:name=".ui.activity.SuccessRegisterActivity" />
-        <activity android:name=".ui.activity.LoginActivity"></activity>
+        <activity android:name=".ui.activity.LoginActivity" />
+        <activity android:name=".ui.activity.OtherCenterActivity" />
+       <!-- <activity android:name=".ui.activity.HtmlActivity"></activity>-->
     </application>
 
 </manifest>
